@@ -1,3 +1,7 @@
+2015-02-23 Ben Shi <powerstudio1st AT 163 DOT com>
+	* support/regression/tests/bug-2357.c:
+	  Improve this test case.
+
 2015-02-22 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/z80/gen.c,
